feat: lista ganhos e gastos e seus responses
